--- a/web/login.html
+++ b/web/login.html
@@ -9,8 +9,8 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="CSS/stylesheetLog.css"/>
-    <script type="text/javascript" src="navbar.js"></script>
-    <script type="text/javascript" src="footer.js"></script>
+    <script type="text/javascript" src="JS/navbar.js"></script>
+    <script type="text/javascript" src="JS/footer.js"></script>
 
 </head>
 <body>
@@ -18,7 +18,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-mainbg">
             <div class="container">
-                <a class="navbar-brand navbar-logo" href="#">Navbar</a>
+                <a class="navbar-brand navbar-logo" href="index.html"><img src="img/graduate.png" id="graduate" alt="Logo"/></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fas fa-bars text-white"></i>
                 </button>
